# MushMachine

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  LICENSE  README.md  mm_options_and_defines.cmake
framework/: CMakeLists.txt
framework/common_components/: CMakeLists.txt
framework/common_components/src/mm/components/: color.hpp  name.hpp  position2d.hpp  position2d_zoffset.hpp  position3d.hpp  rotation2d.hpp  scale2d.hpp  time_delta.hpp  transform2d.hpp  transform3d.hpp  transform4x4.hpp  velocity2d.hpp  velocity2d_position.hpp  velocity2d_position_intent.hpp  velocity2d_rotation.hpp  velocity3d.hpp  view_dir2d.hpp  view_dir3d.hpp
framework/common_components/test/: CMakeLists.txt  component_json_serialization_test.cpp  component_s6zer_serialization_test.cpp
framework/engine/: CMakeLists.txt
framework/engine/src/mm/: engine.cpp  engine.hpp  engine_fwd.hpp
framework/engine/src/mm/services/: count_down.hpp  default_service.cpp  default_service.hpp  net_channeled_interface.hpp  rich_presence_provider_interface.hpp  scene_service_interface.cpp  scene_service_interface.hpp  service.hpp
framework/engine/src/mm/update_strategies/: default_strategy.cpp  default_strategy.hpp  dependency_check_decorater.hpp  dummy.hpp  sequential_strategy.cpp  sequential_strategy.hpp  tasking_utils.hpp  update_strategy.hpp
framework/engine/test/: CMakeLists.txt  default_service_test.cpp  default_us_test.cpp  dependency_check_us_test.cpp  run_test.cpp  service_system_test.cpp  update_strategy_test.cpp  update_test.cpp
framework/filesystem/: CMakeLists.txt
framework/filesystem/src/mm/: fs_const_archiver.cpp  fs_const_archiver.hpp  path_utils.hpp
framework/filesystem/src/mm/services/: filesystem.cpp  filesystem.hpp
framework/filesystem/test/: CMakeLists.txt  filesystem_tests.cpp
framework/filesystem/test/res/: test.zip.h  test_file.txt  wall_concrete-1_se_0.2.json
framework/imgui/: CMakeLists.txt
framework/imgui/res/ionicons/: ionicons.ttf.base85.h  ionicons.ttf.h
framework/imgui/src/mm/imgui/: file_shader_editor.cpp  file_shader_editor.hpp  file_text_editor.cpp  file_text_editor.hpp  fps_overlay.cpp  fps_overlay.hpp  imgui_entt_entity_editor.hpp  sound_info.cpp  sound_info.hpp  sound_pref.cpp  sound_pref.hpp
framework/imgui/src/mm/services/: engine_tools.cpp  engine_tools.hpp  imgui_menu_bar.cpp  imgui_menu_bar.hpp  imgui_s.cpp  imgui_s.hpp  scene_tools.cpp  scene_tools.hpp  screen_director_tools.cpp  screen_director_tools.hpp  sound_tools.cpp  sound_tools.hpp
framework/imgui/test/: CMakeLists.txt  engine_tools_test.cpp  json_editor_test.cpp  scene_tools_test.cpp  sound_test.cpp  text_edit_test.cpp  widget_test.cpp
framework/input/: CMakeLists.txt
framework/input/src/mm/services/: input_service.cpp  input_service.hpp
framework/input/test/: CMakeLists.txt  input_visualizer.cpp  start_test.cpp
framework/logger/: CMakeLists.txt
framework/logger/src/mm/: logger.cpp  logger.hpp  tracy_sink.hpp
framework/opengl_primitives/: CMakeLists.txt
framework/opengl_primitives/src/mm/opengl/: buffer.cpp  buffer.hpp  fbo_builder.cpp  fbo_builder.hpp  frame_buffer_object.cpp  frame_buffer_object.hpp  instance_buffer.hpp  shader.cpp  shader.hpp  shader_builder.cpp  shader_builder.hpp  spritesheet.hpp  texture.cpp  texture.hpp  texture_loader.cpp  texture_loader.hpp  vertex_array_object.cpp  vertex_array_object.hpp
framework/opengl_primitives/test/: CMakeLists.txt  fbo_test.cpp
framework/opengl_renderer/: CMakeLists.txt
framework/opengl_renderer/test/: CMakeLists.txt  batched_spritesheet_render_task_test.cpp  blur_render_task_test.cpp  builtins.cpp  fast_sky_render_task_test.cpp  hdr_bloom_pipeline_example.cpp  imgui_render_task_test.cpp  lite_particles2d.cpp  opengl_renderer_s_test.cpp  simple_rect_render_task_test.cpp  simple_sprite_render_task_test.cpp  simple_spritesheet_render_task_test.cpp  tilemap_render_task_test.cpp
framework/opengl_renderer/test/res/: textures.zip.h
framework/organizer_scene/: CMakeLists.txt
framework/random/: CMakeLists.txt
framework/random/src/mm/random/: srng.cpp  (+1 more)
framework/resource_manager/: CMakeLists.txt
framework/resource_manager/src/mm/: resource_manager.hpp
framework/resource_manager/test/: CMakeLists.txt  resource_test.cpp
framework/s6zer/: CMakeLists.txt
framework/s6zer/test/: CMakeLists.txt  test.cpp
framework/screen_director/: CMakeLists.txt
framework/screen_director/test/: CMakeLists.txt  sd_test.cpp
framework/sdl_service/: CMakeLists.txt
framework/sdl_service/src/mm/: logo-f6c-square.png.h
framework/sdl_service/test/: CMakeLists.txt  start_test.cpp  volk_test1.cpp  vulkan_test.cpp
framework/simple_scene/: CMakeLists.txt
framework/simple_scene/test/: CMakeLists.txt  ss_test.cpp
framework/simple_sdl_renderer/: CMakeLists.txt
framework/simple_sdl_renderer/test/: CMakeLists.txt  start_test.cpp
framework/sound/: CMakeLists.txt
framework/sound/src/mm/: soloud_filesystem_file_impl.cpp  soloud_filesystem_file_impl.hpp  soloud_json.cpp  soloud_json.hpp  sound_loader_sfxr.cpp  sound_loader_sfxr.hpp  sound_loader_wav.cpp  sound_loader_wav.hpp
framework/sound/test/: CMakeLists.txt  file_test.cpp  loader_test.cpp  start_test.cpp
framework/sound/test/res/: erik_gun_fx_1.zip.h
framework/std_utils/: CMakeLists.txt
framework/std_utils/src/mm/: permutation.hpp  scalar_range2.hpp  string_view_split.hpp
framework/std_utils/test/: CMakeLists.txt  scalar_range2_json_test.cpp  scalar_range2_test.cpp
framework/tilemap/: CMakeLists.txt
framework/tilemap/src/mm/: tilemap.cpp  tilemap.hpp
framework/vulkan_renderer/: CMakeLists.txt
framework/vulkan_renderer/test/: CMakeLists.txt  vulkan_test.cpp
screens/mm_logo/: CMakeLists.txt
screens/mm_logo/res/: mush_machine_logo_1.svg.png.h
systems/fast_sky_sun/: CMakeLists.txt
systems/player_velocity/: CMakeLists.txt
systems/player_velocity/test/: CMakeLists.txt  player_velocity_test.cpp
systems/simple_velocity/: CMakeLists.txt
systems/simple_velocity/test/: CMakeLists.txt  simple_velocity_test.cpp
systems/transform/: CMakeLists.txt
(+182 files in other folders)
